--- a/src/package.json
+++ b/src/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
-    "chart.js": "^3.7.0",
-    "react": "^17.0.2",
-    "react-calendar": "^3.3.0",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.1.0",
-    "tailwindcss": "^2.0.2"
-  },
+  "axios": "^0.21.1",
+  "chart.js": "^3.7.0",
+  "react": "^17.0.2",
+  "react-calendar": "^3.3.0",
+  "react-dom": "^17.0.2",
+  "react-router-dom": "^5.1.0",
+  "react-scripts": "4.0.3",
+  "tailwindcss": "^2.0.2"
+},
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.10"
