--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.21.1",
-    "chart.js": "^3.7.0",
-    "react": "^17.0.2",
-    "react-calendar": "^3.3.0",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.1.0",
-    "react-scripts": "4.0.3",
-    "tailwindcss": "^2.0.2"
-  },
+  "axios": "^0.21.1",
+  "chart.js": "^3.7.0",
+  "react": "^17.0.2",
+  "react-calendar": "^3.3.0",
+  "react-dom": "^17.0.2",
+  "react-router-dom": "^5.1.0",
+  "react-scripts": "4.0.3",
+  "tailwindcss": "^2.0.2"
+},
   "devDependencies": {
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.10",
-    "tailwindcss": "^2.0.2"
+    "postcss": "^8.2.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
