--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.10"
+    "postcss": "^8.2.10",
+    "@babel/plugin-proposal-private-property-in-object": "^7.0.0"
   },
   "scripts": {
   "start": "react-scripts start",
@@ -27,7 +28,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": "warn"
+    }
   },
   "browserslist": {
     "production": [
