--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "react-app/jest"
     ],
     "rules": {
-      "no-unused-vars": "warn"
+      "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
     }
   },
   "browserslist": {
